--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         Crystals
                     </Div>
                     <div class="card-body text-center">
-                        <img src="..\assets\images\GreenandPurp.jpg" alt="Green Diamond"
+                        <img src="C:\Users\troyk\Desktop\Unit4game\assets\images\GreenandPurp.jpg" alt="Green Diamond"
                             id="Teal" style="height:150px; width:150px">
                         <img src="C:\Users\troyk\Desktop\Unit4game\assets\images\Orange.jpg" alt="Orange diamond"
                             id="Orange" style="height:150px; width:150px">
