--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="firstR">
             <div class="col-md-2">
                 <div class="card md-4">
                     <div class="card-header">
                         Objective Score
                     </div>
                     <div class="card-body">
-                        <h2 class="text-center" id="ObjectiveScore"></h2>
+                        <h2 class="text-center" id="objectiveScore"></h2>
                     </div>
                 </div>
             </div>
@@ -91,14 +91,14 @@
                         Crystals
                     </Div>
                     <div class="card-body text-center">
-                        <img src=" Unit4game/assets/images/GreenandPurp.jpg" alt="Green Diamond"
-                            id="Teal" style="height:150px; width:150px">
-                        <img src="C:\Users\troyk\Desktop\Unit4game\assets\images\Orange.jpg" alt="Orange diamond"
-                            id="Orange" style="height:150px; width:150px">
-                        <img src="C:\Users\troyk\Desktop\Unit4game\assets\images\Purple.jpg" alt="Purple diamond"
-                            id="Purple" style="height:150px; width:150px">
-                        <img src="C:\Users\troyk\Desktop\Unit4game\assets\images\yellowdiamond.jpg" alt="yellow diamond"
-                            id="Yellow" style="height:150px; width:150px">
+                        <img src=".\assets\images\GreenandPurp.jpg" alt="Green Diamond" id="Teal"
+                            style="height:150px; width:150px; border:solid black">
+                        <img src=".\assets\images\Orange.jpg" alt="Orange diamond" id="Orange"
+                            style="height:150px; width:150px; border:solid black">
+                        <img src=".\assets\images\Purple.jpg" alt="Purple diamond" id="Purple"
+                            style="height:150px; width:150px; border:solid black">
+                        <img src=".\assets\images\yellowdiamond.jpg" alt="yellow diamond" id="Yellow"
+                            style="height:150px; width:150px; border: solid black">
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card mb-4">
+                <div class="card mb-4 text-center">
                     <i class="fas fa-skull-crossbones">
                         <i class="fas fa-skull-crossbones">
                             <i class="fas fa-skull-crossbones">
@@ -125,7 +125,37 @@
                                             <i class="fas fa-skull-crossbones">
                                                 <i class="fas fa-skull-crossbones">
                                                     <i class="fas fa-skull-crossbones">
-                                                        <i class="fas fa-skull-crossbones">
+                                                <i class="fas fa-skull-crossbones">
+                                            <i class="fas fa-skull-crossbones">
+                                        <i class="fas fa-skull-crossbones">
+                                     <i class="fas fa-skull-crossbones">
+                                 <i class="fas fa-skull-crossbones">
+                             <i class="fas fa-skull-crossbones">
+                        <i class="fas fa-skull-crossbones">
+                     <i class="fas fa-skull-crossbones">
+                        <i class="fas fa-skull-crossbones">
+                            <i class="fas fa-skull-crossbones">
+                                <i class="fas fa-skull-crossbones">
+                                    <i class="fas fa-skull-crossbones">
+                                        <i class="fas fa-skull-crossbones">
+                                            <i class="fas fa-skull-crossbones">
+                                                <i class="fas fa-skull-crossbones">
+                                                    <i class="fas fa-skull-crossbones">
+                                                     </i>
+                                                        </i>
+                                                            </i>
+                                                                </i>
+                                                                    </i>
+                                                                        </i>
+                                                                            </i>
+                                                                                 </i>
+                                                                                    </i>
+                                                                                </i>
+                                                                            </i>
+                                                                        </i>
+                                                                    </i>
+                                                                </i>
+                                                            </i>
                                                         </i>
                                                     </i>
                                                 </i>
@@ -141,14 +171,14 @@
                         Games Lost
                     </div>
                     <div class="card-body">
-                        <h2 class="text-center" id="games-Lost"> 0 </h2>
+                        <h2 class="text-center" id="games-lost"> 0 </h2>
                     </div>
                 </div>
             </div>
         </div>
     </Div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src ="C:\Users\troyk\Desktop\Unit4game\assets\javascriptgame.js"></script>
+    <script src=".\assets\javascript\game.js"></script>
 
 </Body>
 
